--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/compiler-sfc": "^3.2.26",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "@popperjs/core": "^2.11.6",
+    "@vue/compiler-sfc": "^3.2.47",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
   }
 }
